--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ledgersmb (1.2.10) unstable; urgency=low
+ledgersmb (1.2.10-1) unstable; urgency=low
 
   * New upstream release
 
- -- Elizabeth Bevilacqua <lyz@princessleia.com>  Thu, 27 Dec 2007 14:10:32 -0500
+ -- Elizabeth Bevilacqua <lyz@princessleia.com>  Fri, 25 Jan 2008 09:34:41 -0500
 
 ledgersmb (1.2.5-2) unstable; urgency=low
 
