--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ledgersmb (1.2.12-1) unstable; urgency=low
+ledgersmb (1.2.13-1) unstable; urgency=low
 
   * New upstream release
 
- -- Elizabeth Bevilacqua <lyz@princessleia.com>  Fri, 25 Jan 2008 09:34:41 -0500
+ -- Elizabeth Bevilacqua <lyz@princessleia.com>  Tue, 18 Mar 2008 12:11:09 +0000
 
 ledgersmb (1.2.5-2) unstable; urgency=low
 
