--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 ledgersmb (1.2.13-1) unstable; urgency=low
 
+  [ Elizabeth Bevilacqua ]
   * New upstream release
-  * Upstream got rid of makefiles, so added the rules that are now needed to the rules file
- -- Elizabeth Bevilacqua <lyz@princessleia.com>  Tue, 18 Mar 2008 12:11:09 +0000
+
+ -- Elizabeth Bevilacqua <lyz@princessleia.com>  Tue, 08 Apr 2008 19:02:35 +0000
 
 ledgersmb (1.2.5-2) unstable; urgency=low
 
