--- a/ledger-smb/tags/1.2.13/debian/changelog
+++ b/ledger-smb/tags/1.2.13/debian/changelog
@@ -1,11 +1,6 @@
-ledgersmb (1.2.14-1) unstable; urgency=low
-
-  * New upstream release 
-
- -- Elizabeth Bevilacqua <lyz@princessleia.com>  Fri, 22 Aug 2008 02:16:15 +0000
-
 ledgersmb (1.2.13-1) unstable; urgency=low
 
+  [ Elizabeth Bevilacqua ]
   * New upstream release
 
  -- Elizabeth Bevilacqua <lyz@princessleia.com>  Tue, 08 Apr 2008 19:02:35 +0000
