--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.2.15-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Elizabeth Bevilacqua <lyz@princessleia.com>  Tue, 26 Aug 2008 18:48:58 +0000
+
 ledgersmb (1.2.14-1) unstable; urgency=low
 
   * New upstream release 
