--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,3 +1,10 @@
+ledgersmb (1.2.16-1) unstable; urgency=low
+
+  * New upstream release
+  * Edited README.Debian for better clarity
+
+ -- Elizabeth Bevilacqua <lyz@princessleia.com>  Wed, 10 Sep 2008 02:52:06 +0000
+
 ledgersmb (1.2.15-2) unstable; urgency=low
 
   * Added postgres-8.3 to depends and suggests 
