--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,3 +1,10 @@
+ledgersmb (1.2.17-2) UNRELEASED; urgency=low
+
+  * Added index.html link to doc/ledgersmb/html_manual/LedgerSMB-manual.html 
+  * Added HTML format section to ledgersmb.doc-base
+
+ -- Robert James Clay <jame@rocasa.org>  Sat, 14 Mar 2009 10:42:42 -0400
+
 ledgersmb (1.2.17-1) unstable; urgency=low
 
   * New upstream release
