--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,9 +1,13 @@
-ledgersmb (1.2.17-2) UNRELEASED; urgency=low
+ledgersmb (1.2.18-1) unstable; urgency=low
 
+  [ Robert James Clay ]
   * Added index.html link to doc/ledgersmb/html_manual/LedgerSMB-manual.html 
   * Added HTML format section to ledgersmb.doc-base
 
- -- Robert James Clay <jame@rocasa.org>  Sat, 14 Mar 2009 10:42:42 -0400
+  [ Elizabeth Krumbach ]
+  * New upstream release 
+
+ -- Elizabeth Krumbach <lyz@princessleia.com>  Mon, 06 Apr 2009 00:16:23 +0000
 
 ledgersmb (1.2.17-1) unstable; urgency=low
 
