--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.2.19-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Robert James Clay <jame@rocasa.us>  Sat, 13 Feb 2010 12:08:25 -0500
+
 ledgersmb (1.2.18-1) unstable; urgency=low
 
   [ Robert James Clay ]
