--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.2.20-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Robert James Clay <jame@rocasa.us>  Sat, 20 Feb 2010 11:40:38 -0500
+
 ledgersmb (1.2.19-1) unstable; urgency=low
 
   * New upstream release
