--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.2.21-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Robert James Clay <jame@rocasa.us>  Sat, 13 Mar 2010 12:54:38 -0500
+
 ledgersmb (1.2.20-1) unstable; urgency=low
 
   * New upstream release
