--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,8 +1,9 @@
 ledgersmb (1.2.21-1) UNRELEASED; urgency=low
 
   * New upstream release
+  * Detailed the Debian packaging copyright in debian/copyright.
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 13 Mar 2010 12:54:38 -0500
+ -- Robert James Clay <jame@rocasa.us>  Sat, 20 Mar 2010 11:17:25 -0400
 
 ledgersmb (1.2.20-1) unstable; urgency=low
 
