--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.2.22-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Robert James Clay <jame@rocasa.us>  Thu, 16 Jun 2011 13:54:10 -0400
+
 ledgersmb (1.2.21-1) unstable; urgency=low
 
   * New upstream release
