--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.2.23-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Robert James Clay <jame@rocasa.us>  Mon, 28 Sep 2011 09:25:21 -0400
+
 ledgersmb (1.2.22-1) unstable; urgency=low
 
   * New upstream release
