--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-ledgersmb (1.2.23-1) UNRELEASED; urgency=low
+ledgersmb (1.2.23-1) unstable; urgency=low
 
   * New upstream release
+  * Cleanup newline issue in debian/links file.
 
- -- Robert James Clay <jame@rocasa.us>  Mon, 28 Sep 2011 09:25:21 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon, 28 Sep 2011 09:43:37 -0400
 
 ledgersmb (1.2.22-1) unstable; urgency=low
 
