--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,17 @@
-ledgersmb (1.2.22-1) UNRELEASED; urgency=low
+ledgersmb (1.2.23-1) unstable; urgency=low
 
   * New upstream release
+  * Cleanup newline issue in debian/links file.
 
- -- Robert James Clay <jame@rocasa.us>  Thu, 16 Jun 2011 13:54:10 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon, 28 Sep 2011 09:43:37 -0400
+
+ledgersmb (1.2.22-1) unstable; urgency=low
+
+  * New upstream release
+  * Add note to README.source about how the source archive is currently
+    being created.
+
+ -- Robert James Clay <jame@rocasa.us>  Mon, 28 Sep 2011 08:19:11 -0400
 
 ledgersmb (1.2.21-1) unstable; urgency=low
 
