--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.2.24-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Robert James Clay <jame@rocasa.us>  Mon, 28 Sep 2011 10:24:13 -0400
+
 ledgersmb (1.2.23-1) unstable; urgency=low
 
   * New upstream release
