Start package work for new release v1.2.25.
git-svn-id: svn+ssh://svn.debian.org/svn/pkg-sql-ledger/ledger-smb/trunk@261 c065a19f-0a03-0410-aadb-caf30d9ec67c

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.2.25-1) UNRELEASED; urgency=low
+
+  * New upstream release, which includes corrections for sql injection issue.
+
+ -- Robert James Clay <jame@rocasa.us>  Sat, 01 Oct 2011 17:54:55 -0400
+
 ledgersmb (1.2.24-1) unstable; urgency=low
 
   * New upstream release
