--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,16 +1,17 @@
 ledgersmb (1.2.25-1~2) UNRELEASED; urgency=low
 
   * New upstream release, which includes corrections for sql injection issue.
-  * Updated Standards-Version in debian/control to 3.9.1;  no changes required?
-  * Use dh_lintian in debian/rules to install debian/ledgersmb.lintian-overrides.
-  * Updated copyright years as neccessary to include 2011 in debian/copyright.
+  * Updated Standards-Version in debian/control to 3.9.1; no changes required?
+  * Updated copyright years as necessary to include 2011 in debian/copyright.
+  * Use dpkg-statoverride and postinst to set /etc/ledgersmb/* permissions.
+  * Use dh_lintian in debian/rules to install ledgersmb.lintian-overrides.
   * Updated debhelper compatibility to 7 and Build-Depends to 7.0.50.
-  * Use dpkg-statoverride to set /etc/ledgersmb/* permissions.
-  * Changing patching system from dpatch to quilt.
+  * Updated the package Recommends in debian/control.
   * Change 'dh_clean -k' to dh_prep in debian/rules.
+  * Changing patching system from dpatch to quilt.
   * Switch to dpkg-source 3.0 (quilt) format.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 04 Oct 2011 20:51:25 -0400
+ -- Robert James Clay <jame@rocasa.us>  Wed, 05 Oct 2011 15:58:35 -0400
 
 ledgersmb (1.2.24-1) unstable; urgency=low
 
