--- a/debian/changelog
+++ b/debian/changelog
@@ -6,12 +6,13 @@ ledgersmb (1.2.25-1~3) UNRELEASED; urgency=low
   * Use dpkg-statoverride and postinst to set /etc/ledgersmb/* permissions.
   * Use dh_lintian in debian/rules to install ledgersmb.lintian-overrides.
   * Updated debhelper compatibility to 7 and Build-Depends to 7.0.50.
-  * Updated the package Recommends in debian/control.
+  * Updated the package Depends and Recommends in debian/control.
+  * Changing over to use dh_install for file installation.
   * Change 'dh_clean -k' to dh_prep in debian/rules.
   * Changing patching system from dpatch to quilt.
   * Switch to dpkg-source 3.0 (quilt) format.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 05 Oct 2011 16:47:35 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon, 08 Oct 2011 20:02:45 -0400
 
 ledgersmb (1.2.24-1) unstable; urgency=low
 
