--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.3.0-1~1) UNRELEASED; urgency=low
+
+  * New upstream release and first release in Debian.
+
+ -- Robert James Clay <jame@rocasa.us>  Sat, 08 Oct 2011 20:53:45 -0400
+
 ledgersmb (1.2.25-1~3) UNRELEASED; urgency=low
 
   * New upstream release, which includes corrections for sql injection issue.
@@ -12,7 +18,7 @@ ledgersmb (1.2.25-1~3) UNRELEASED; urgency=low
   * Changing patching system from dpatch to quilt.
   * Switch to dpkg-source 3.0 (quilt) format.
 
- -- Robert James Clay <jame@rocasa.us>  Mon, 08 Oct 2011 20:02:45 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 08 Oct 2011 20:02:45 -0400
 
 ledgersmb (1.2.24-1) unstable; urgency=low
 
