--- a/ledger-smb/branches/v1.2/debian/changelog
+++ b/ledger-smb/branches/v1.2/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.2.26-1) UNRELEASED; urgency=low
+
+  * New upstream release, ...
+
+ -- Robert James Clay <jame@rocasa.us>  Thu, 03 Nov 2011 19:33:36 -0400
+
 ledgersmb (1.2.25-1) stable; urgency=low
 
   * New upstream release, which includes corrections for sql injection issue.
