--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ledgersmb (1.3.8-1~2) UNRELEASED; urgency=low
+
+  * Test build for 1.3.8-1~2
+  * Update debian/patches/05_confdir.patch for v1.3.8
+
+ -- Robert James Clay <jame@rocasa.us>  Tue, 13 Dec 2011 18:38:49 -0500
+
 ledgersmb (1.3.0-1) experimental; urgency=low
 
   * New upstream release, first in the v1.3 series.
