--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,9 +1,19 @@
-ledgersmb (1.3.8-1~2) UNRELEASED; urgency=low
+ledgersmb (1.3.8-1) experimental; urgency=low
 
-  * Test build for 1.3.8-1~2
-  * Update debian/patches/05_confdir.patch for v1.3.8
+  * Added a debian/TODO file.
+  * Do not install v1.3.x INSTALL file with package.
+  * Update debian/patches/05_confdir.patch for v1.3.8.
+  * Minor edit to the short description in debian/control.
+  * Reorganize Depends and Recommends entries in debian/control.
+  * Replace XML::Twig package references with OpenOffice::OODoc.
+  * Update to v1.3.x README.Debian adapted from v1.3 INSTALL file.
+  * Add ledgersmb-httpd.conf.template to debian/ledgersmb.examples.
+  * Create default ledgersmb-httpd.conf from ledgersmb-httpd.conf.template.
+  * Remove chmod of /etc/ledgersmb/*.pl from postinst as no longer neccessary.
+  * Upstream no longer providing an HTML version of the manual, so remove that
+    entry in debian/ledgersmb.doc-base.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 13 Dec 2011 18:38:49 -0500
+ -- Robert James Clay <jame@rocasa.us>  Thu, 15 Dec 2011 14:58:50 -0500
 
 ledgersmb (1.3.0-1) experimental; urgency=low
 
