--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.3.9-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Robert James Clay <jame@rocasa.us>  Thu, 15 Dec 2011 22:37:22 -0500
+
 ledgersmb (1.3.8-1) experimental; urgency=low
 
   * Added a debian/TODO file.
