--- a/debian/changelog
+++ b/debian/changelog
@@ -1,16 +1,26 @@
-ledgersmb (1.2.25-2) UNRELEASED; urgency=low
+ledgersmb (1.2.25-2~1b) UNRELEASED; urgency=low
 
   TODO: Until such time as a new release in the v1.2 series becomes available,
-        update the v1.2 series Debian packaging as neccessary or needed.
+        update the v1.2 series Debian packaging as necessary or needed. For
+        more details, see also the file debian/TODO.
+  * Changes to debian/rules:
+    - Rewrite debian/rules to use the dh command.
   * Changes to debian/control:
+    - Change the shlibs:Depends to a perl:Depends.
+    - Change the Recommends for lpr to a Suggests.
     - Change web server dependency to 'apache2 | httpd-cgi'.
+    - Change the mail related  Recommends to 'default-mta | mail-transport-agent'
+      from 'mail-transport-agent'.
   * Change how the configuration files are installed.
   * Install ledgersmb.conf.default as an example file.
+  * Clean up the comments in the debian/watch control file.
   * Add the LedgerSBM FAQ to the documents being registered.
   * Install softlink to the /etc/ledgersmb/ledgersmb-httpd.conf configuration
     file from /etc/apache2/conf.d/ledgersmb-httpd.conf.
+  * Prefix the binary-package specific filenames in the debian directory with
+    the package name.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 28 Dec 2011 13:17:33 -0500
+ -- Robert James Clay <jame@rocasa.us>  Wed, 28 Dec 2011 18:23:16 -0500
 
 ledgersmb (1.2.25-1) stable; urgency=low
 
