--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.3.10~rc2-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Robert James Clay <jame@rocasa.us>  Sun, 15 Jan 2012 15:50:47 -0500
+
 ledgersmb (1.3.9-2) experimental; urgency=low
 
   * Change debhelper compatibility to 8.
