--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-ledgersmb (1.3.13-1~2) UNRELEASED; urgency=low
+ledgersmb (1.3.13-1) experimental; urgency=low
 
   * New upstream release.
-  * Correct a formatting issue in the debian/copyright file.
+  * Correct formatting issues in the debian/copyright file.
   * Do not install doc/manual/*tex source files with package.
   * Changes for debian/patches/*:
     - Add patching of ledgersmb.conf.default to 05_confdir.patch.
@@ -10,7 +10,7 @@ ledgersmb (1.3.13-1~2) UNRELEASED; urgency=low
     - Remove the sed code for patching the ledgersmb.conf.default file from
       the override_dh_auto_configure target.
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 17 Mar 2012 09:24:11 -0400
+ -- Robert James Clay <jame@rocasa.us>  Wed, 21 Mar 2012 20:45:18 -0400
 
 ledgersmb (1.3.12-1) experimental; urgency=low
 
