--- a/debian/TODO
+++ b/debian/TODO
@@ -1,22 +1,14 @@
 debian/TODO for LedgerSMB v1.3
 
+- The database configuration using dbconfig-common  is creating the ledgersmb user
+but not with the correct permissions.  Standard setup uses something like this:
+CREATE ROLE ledgersmb WITH SUPERUSER LOGIN NOINHERIT ENCRYPTED PASSWORD '$password';"
 
+- The dbconfig configuration is apparantly automatically creating a database
+named ledgersmb when it creates the ledgersmb user.  Is that really needed?
 
-- Lintian Info ledgersmb: I unused-override, package-contains-empty-directory.
-Don't know why that's coming up because the two listed directories are being
-installed with the package and they are empty. Possibly an issue with how
-they're entered in the file. 
-
-- Auto-configuration of PostgreSQL and access to it by LedgerSMB using dbconfig-common.
-First;  check if manual or assisted configuration.  If assisted, create ledgersmb
-postgresql user as LedgerSMB admin.  If manual;  msg about docs for manual set up?
-
-- If the tools/prepare-company-database.sh script is to be usable on the Debian
-installation, it will need to be patched. For instance:  Lines 199 and 200 (as
-of 1.3.12) are used in the script to create ledgersmb-httpd.conf from the
-ledgersmb-httpd.conf.template apparantly each time it runs. Current Debian
-install does not have either the template file or the working file in the place
-it expects and in any case the debian package install takes care of those.
+- Review the tools/* shell and perl scripts to see what if any need changes for
+usage on a debian installation.
 
 - Upstream uses pdflatex to create distribution LedgerSMB-manual.pdf from the
 source file doc/manual/LedgerSMB-manual.tex. Use the same source file to create
@@ -25,18 +17,21 @@ an HTML version?
 - The templates directory had been getting installed to /etc/ledgersmb/templates.
 Should that be /var/lib/ledgersmb/templates instead?
 
-- New 1.3 version of LedgerSMB contains an embedded javascript library. The embedded
-version appears to be 1.8.2.  The library is available in Debian as the package
-libjs-scriptaculous:  v1.8.1 in lenny (current oldstable), v1.8.3 in lenny-backports,
-v1.8.3 in squeeze, v1.9.0 in wheezy. Provide a Lintian override with description of
-issue, until otherwise resolved.
+- New 1.3 version of LedgerSMB contains an embedded javascript library. The
+embedded version appears to be 1.8.2.  The library is available in Debian as the
+package libjs-scriptaculous:  v1.8.1 in lenny (current oldstable), v1.8.3 in
+lenny-backports, v1.8.3 in squeeze, v1.9.0 in wheezy. Provide a Lintian override
+with description of issue, until otherwise resolved.
   From Chris Travers in the Ledger-smb-devel mailing list:
-  "I don't know of any testing we have done on other versions.  We don't use a lot
-   of advanced stuff so I would expect it would work.  If bugs are found, though,
-   we can correct them."
+  "I don't know of any testing we have done on other versions.  We don't use a
+   lot of advanced stuff so I would expect it would work.  If bugs are found,
+   though, we can correct them."
 Test usage of libjs-scriptaculous and change over to using that when it is found
 to be operational with it.
 
+- Apache v2.4 was released in February 2012 and is being prepared for upload into
+Debian. Ref: http://lists.debian.org/debian-devel-announce/2012/03/msg00013.html
+at least regarding packaging guidelines.
 
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 21 Mar 2012 20:17:22 -0500
+ -- Robert James Clay <jame@rocasa.us>  Thu, 05 Apr 2012 15:34:18 -0500
