LedgerSMB debian/* for 1.3.14-2.
* debian-dev: (41 commits)
  Revert "Do not need debconf translations as yet."
  LedgerSMB debian/changelog for experimental 1.3.14-2.
  Do not need a debian/ledgersmb.prerm file as yet.
  Do not need debconf translations as yet.
  LedgerSMB debian/TODO as of 11 Apr 2012.
  Add debian/NEWS to the packaging.
  Add symbolic link for /var/lib/ledgersmb/css directory.
  debian/changelog for LedgerSMB UNRELEASED v1.3.14-2~6.
  Update how apache is restarted in debian/ledgersmb.postinst.
  debian/changelog for LedgerSMB UNRELEASED v1.3.14-2~5.
  Add ledgersmb database user information to README.Debian.
  Remove direct usage of tools/prepare-company-database.sh from README.Debian.
  Change default for ledgersmb/lsmb_debconf in debian/templates to false.
  LedgerSMB debian/changelog for UNLRELEASED 1.3.14-2~4.
  Add debian/po/* files back in to debian directory.
  Add to lsmb_login long description in debian/templates.
  Correct Description field entries in debian/templates.
  Add configuration of ledgersmb database user using dbconfig-common.
  LedgerSMB debian/changelog for UNLRELEASED 1.3.14-2~3.
  LedgerSMB debian/TODO as of 5 Apr 2012.
  ...

git-svn-id: svn+ssh://svn.debian.org/svn/pkg-sql-ledger/ledger-smb/trunk@503 c065a19f-0a03-0410-aadb-caf30d9ec67c

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,18 @@
-ledgersmb (1.3.14-2~1) UNRELEASED; urgency=low
+ledgersmb (1.3.14-2) experimental; urgency=low
 
-  * Add patches/20_LedgerSMB-Form-pod.patch to correct spelling error.
+  * Add initial version of the debian/NEWS file.
+  * Update and rewrite of debian/README.Debian.
+  * Changes to debian/ledgersmb.postinst:
+    - Rewrite the statoverride version check.
+    - Change how the version variable is being used.
+    - Update how apache is restarted when that is needed.
+  * Add patches/20_LedgerSMB-Form-pod.patch to correct spelling errors.
   * Add lintian override for empty directory ledgersmb/sql/coa/ar/gifi/.
+  * Initial addition of experimental debconf/dbconfig usage to ledgersmb.
+  * Add a symbolic link from /usr/share/ledgersmb/css to the directory
+    /var/lib/ledgersmb/css.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 03 Apr 2012 22:40:17 -0400
+ -- Robert James Clay <jame@rocasa.us>  Wed, 11 Apr 2012 16:37:30 -0400
 
 ledgersmb (1.3.14-1) experimental; urgency=low
 
